force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operation__c/Operation__c.object-meta.xml
<CustomObject>
    <label>Operation</label>
    <nameField>
        <displayFormat>OPS-{0000}</displayFormat>
        <label>Operation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>