force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operation__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>PR1064302-452 - Mule will set the operations as active/inactive based on the inbound data.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>