force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operation__c/fields/Crews_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Crews_Numeric__c</fullName>
    <description>Resolved crew count from the related plan function for Initiative Actuals editability.</description>
    <formula>Plant_Function__r.Crews_Numeric__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crews Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>