force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operation__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <description>PR1064302-452</description>
    <label>Equipment</label>
    <length>200</length>
    <type>Text</type>
</CustomField>