force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operation__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>External Id field on operations</description>
    <externalId>true</externalId>
    <inlineHelpText>External Id field on operations</inlineHelpText>
    <label>External Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>