force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operation__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PR1064302-452</description>
    <label>Plant</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipName>Operations</relationshipName>
    <type>Lookup</type>
</CustomField>