force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operation__c/fields/Plant_Function__c.field-meta.xml
<CustomField>
    <fullName>Plant_Function__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plan function assignment used to filter operations on the Initiative Actuals tab.</description>
    <label>Plan Function</label>
    <referenceTo>Plant_Function__c</referenceTo>
    <relationshipLabel>Operations</relationshipLabel>
    <relationshipName>Operations</relationshipName>
    <type>Lookup</type>
</CustomField>