force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operation__c/fields/Plant_Shop_Name__c.field-meta.xml
<CustomField>
    <fullName>Plant_Shop_Name__c</fullName>
    <description>PR1064302-452</description>
    <label>Plant Shop Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>