force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operation__c/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <description>PR1064302-452</description>
    <label>Team Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>