force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Operation__c/recordTypes/Stockman.recordType-meta.xml
<RecordType>
    <fullName>Stockman</fullName>
    <active>true</active>
    <label>Stockman</label>
</RecordType>